# edubot2025_ros2

./: .gitignore  README.md  calibration_1.txt  calibration_2.txt  calibration_3.txt
src/bluepill_ros2_control/: CMakeLists.txt  README.md  bluepill_ros2_control.xml  package.xml
src/bluepill_ros2_control/include/bluepill_ros2_control/: bluepill_system.hpp
src/bluepill_ros2_control/src/: bluepill_system.cpp
src/mybot_apps/: README.md  package.xml  setup.cfg  setup.py
src/mybot_apps/mybot_apps/: joint_delta.py  square.py  straight_calib.py  straight_hold_heading.py  yaw_rate_hold.py
src/mybot_bringup/: README.md  package.xml  setup.cfg  setup.py
src/mybot_bringup/config/: controllers.yaml  ekf.yaml
src/mybot_bringup/launch/: bringup.launch.py
src/mybot_bringup/urdf/: mybot.urdf.xacro
